# wacr

./: Cargo.toml  Dockerfile  Readme.md
public/: index.html
src/: main.rs
src/api/: asr.rs  jwt.rs  mod.rs  session.rs
src/asr/: client.rs  mod.rs  processor.rs  upload.rs
src/garbage/: collector.rs
src/webrtc/: mod.rs  session.rs
