[package]
name = "wacr"
version = "2.2.0"
edition = "2021"
description = "The backend for WebRTC -> VK ASR (speech recognition technology) interaction."
readme = "Readme.md"
license = "MIT OR Apache-2.0"
authors = ["Mnwa <mikhail@panfilov.tech>"]
repository = "https://github.com/Mnwa/wacr"
keywords = ["asr", "speech-recognision", "vk", "webrtc", "speech-to-text"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
log = "0.4"
sha2 = "0.10"
jsonwebtoken = "8.1"
hmac = "0.12"
actix = "0.13"
futures = "0.3"
env_logger = "0.9"
dashmap = "5.4"
actix-files = "0.6"
vkclient = "3"
hyper-multipart-rfc7578 = "0.8"
serde_urlencoded = "0.7"
base64 = "0.13"
actix-cors = "0.6"

[dependencies.hyper-rustls]
version = "0.23"
features = ["http2"]

[dependencies.hyper]
version = "0.14"
features = ["client", "http2"]

[dependencies.url]
version = "2"
features = ["serde"]

[dependencies.uuid]
version = "1"
features = ["v4", "serde"]

[dependencies.webrtc]
version = "0.5"

[dependencies.actix-web]
version = "4"
features = ["rustls"]

[dependencies.rustls]
version = "0.20"

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"
